dataui/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declaration
Rule 3     declarations -> declaration declarations
Rule 4     declaration -> expr DOT
Rule 5     declaration -> expr IMPLIED_BY body DOT
Rule 6     declaration -> exprs PSLASH q_exprs DOT
Rule 7     declaration -> exprs PSLASH q_exprs IMPLIED_BY body DOT
Rule 8     declaration -> NAME LBRACE expr RBRACE DOT
Rule 9     declaration -> NAME LBRACE expr RBRACE IMPLIED_BY body DOT
Rule 10    declaration -> AT NAME NAME DOT
Rule 11    terms -> <empty>
Rule 12    terms -> term terms
Rule 13    term -> NAME
Rule 14    term -> LPAREN expr RPAREN
Rule 15    exprs -> <empty>
Rule 16    q_exprs -> <empty>
Rule 17    exprs -> exprs_comma
Rule 18    q_exprs -> q_exprs_comma
Rule 19    exprs_comma -> expr
Rule 20    q_exprs_comma -> q_expr
Rule 21    exprs_comma -> expr COMMA exprs_comma
Rule 22    q_exprs_comma -> q_expr COMMA q_exprs_comma
Rule 23    body -> expr
Rule 24    body -> window
Rule 25    body -> expr COMMA body
Rule 26    body -> window COMMA body
Rule 27    window -> SET vars operators
Rule 28    vars -> VAR
Rule 29    vars -> VAR vars
Rule 30    operators -> COLON operator
Rule 31    operators -> COLON operator operators
Rule 32    operator -> NAME terms BY term
Rule 33    operator -> NAME terms AS term
Rule 34    q_expr -> QUESTION expr
Rule 35    q_expr -> expr
Rule 36    expr -> NAME terms
Rule 37    expr -> literal
Rule 38    expr -> expr PLUS expr
Rule 39    expr -> expr MINUS expr
Rule 40    expr -> expr EQ expr
Rule 41    expr -> expr NE expr
Rule 42    expr -> expr LE expr
Rule 43    expr -> expr GE expr
Rule 44    expr -> expr LT expr
Rule 45    expr -> expr GT expr
Rule 46    expr -> expr STAR expr
Rule 47    expr -> expr SLASH expr
Rule 48    expr -> expr MODULO expr
Rule 49    expr -> expr POW expr
Rule 50    expr -> MINUS expr
Rule 51    expr -> LPAREN expr RPAREN
Rule 52    term -> LBRACKET exprs RBRACKET
Rule 53    term -> literal
Rule 54    literal -> INT
Rule 55    literal -> STRING
Rule 56    literal -> FLOAT
Rule 57    literal -> VAR

Terminals, with rules where they appear

AS                   : 33
AT                   : 10
BY                   : 32
COLON                : 30 31
COMMA                : 21 22 25 26
DOT                  : 4 5 6 7 8 9 10
EQ                   : 40
FLOAT                : 56
GE                   : 43
GT                   : 45
IMPLIED_BY           : 5 7 9
INT                  : 54
LBRACE               : 8 9
LBRACKET             : 52
LE                   : 42
LPAREN               : 14 51
LT                   : 44
MINUS                : 39 50
MODULO               : 48
NAME                 : 8 9 10 10 13 32 33 36
NE                   : 41
PLUS                 : 38
POW                  : 49
PSLASH               : 6 7
QUESTION             : 34
RBRACE               : 8 9
RBRACKET             : 52
RPAREN               : 14 51
SET                  : 27
SLASH                : 47
STAR                 : 46
STRING               : 55
VAR                  : 28 29 57
error                : 

Nonterminals, with rules where they appear

body                 : 5 7 9 25 26
declaration          : 2 3
declarations         : 1 3
expr                 : 4 5 8 9 14 19 21 23 25 34 35 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 51
exprs                : 6 7 52
exprs_comma          : 17 21
literal              : 37 53
operator             : 30 31
operators            : 27 31
program              : 0
q_expr               : 20 22
q_exprs              : 6 7
q_exprs_comma        : 18 22
term                 : 12 32 33
terms                : 12 32 33 36
vars                 : 27 29
window               : 24 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declaration
    (3) declarations -> . declaration declarations
    (4) declaration -> . expr DOT
    (5) declaration -> . expr IMPLIED_BY body DOT
    (6) declaration -> . exprs PSLASH q_exprs DOT
    (7) declaration -> . exprs PSLASH q_exprs IMPLIED_BY body DOT
    (8) declaration -> . NAME LBRACE expr RBRACE DOT
    (9) declaration -> . NAME LBRACE expr RBRACE IMPLIED_BY body DOT
    (10) declaration -> . AT NAME NAME DOT
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (15) exprs -> .
    (17) exprs -> . exprs_comma
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR
    (19) exprs_comma -> . expr
    (21) exprs_comma -> . expr COMMA exprs_comma

    NAME            shift and go to state 6
    AT              shift and go to state 7
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    PSLASH          reduce using rule 15 (exprs -> .)
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    expr                           shift and go to state 4
    exprs                          shift and go to state 5
    literal                        shift and go to state 8
    exprs_comma                    shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .

    $end            reduce using rule 1 (program -> declarations .)


state 3

    (2) declarations -> declaration .
    (3) declarations -> declaration . declarations
    (2) declarations -> . declaration
    (3) declarations -> . declaration declarations
    (4) declaration -> . expr DOT
    (5) declaration -> . expr IMPLIED_BY body DOT
    (6) declaration -> . exprs PSLASH q_exprs DOT
    (7) declaration -> . exprs PSLASH q_exprs IMPLIED_BY body DOT
    (8) declaration -> . NAME LBRACE expr RBRACE DOT
    (9) declaration -> . NAME LBRACE expr RBRACE IMPLIED_BY body DOT
    (10) declaration -> . AT NAME NAME DOT
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (15) exprs -> .
    (17) exprs -> . exprs_comma
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR
    (19) exprs_comma -> . expr
    (21) exprs_comma -> . expr COMMA exprs_comma

    $end            reduce using rule 2 (declarations -> declaration .)
    NAME            shift and go to state 6
    AT              shift and go to state 7
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    PSLASH          reduce using rule 15 (exprs -> .)
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    declaration                    shift and go to state 3
    declarations                   shift and go to state 16
    expr                           shift and go to state 4
    exprs                          shift and go to state 5
    literal                        shift and go to state 8
    exprs_comma                    shift and go to state 11

state 4

    (4) declaration -> expr . DOT
    (5) declaration -> expr . IMPLIED_BY body DOT
    (38) expr -> expr . PLUS expr
    (39) expr -> expr . MINUS expr
    (40) expr -> expr . EQ expr
    (41) expr -> expr . NE expr
    (42) expr -> expr . LE expr
    (43) expr -> expr . GE expr
    (44) expr -> expr . LT expr
    (45) expr -> expr . GT expr
    (46) expr -> expr . STAR expr
    (47) expr -> expr . SLASH expr
    (48) expr -> expr . MODULO expr
    (49) expr -> expr . POW expr
    (19) exprs_comma -> expr .
    (21) exprs_comma -> expr . COMMA exprs_comma

    DOT             shift and go to state 17
    IMPLIED_BY      shift and go to state 18
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    EQ              shift and go to state 21
    NE              shift and go to state 22
    LE              shift and go to state 23
    GE              shift and go to state 24
    LT              shift and go to state 25
    GT              shift and go to state 26
    STAR            shift and go to state 27
    SLASH           shift and go to state 28
    MODULO          shift and go to state 29
    POW             shift and go to state 30
    PSLASH          reduce using rule 19 (exprs_comma -> expr .)
    COMMA           shift and go to state 31


state 5

    (6) declaration -> exprs . PSLASH q_exprs DOT
    (7) declaration -> exprs . PSLASH q_exprs IMPLIED_BY body DOT

    PSLASH          shift and go to state 32


state 6

    (8) declaration -> NAME . LBRACE expr RBRACE DOT
    (9) declaration -> NAME . LBRACE expr RBRACE IMPLIED_BY body DOT
    (36) expr -> NAME . terms
    (11) terms -> .
    (12) terms -> . term terms
    (13) term -> . NAME
    (14) term -> . LPAREN expr RPAREN
    (52) term -> . LBRACKET exprs RBRACKET
    (53) term -> . literal
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    LBRACE          shift and go to state 34
    DOT             reduce using rule 11 (terms -> .)
    IMPLIED_BY      reduce using rule 11 (terms -> .)
    PLUS            reduce using rule 11 (terms -> .)
    MINUS           reduce using rule 11 (terms -> .)
    EQ              reduce using rule 11 (terms -> .)
    NE              reduce using rule 11 (terms -> .)
    LE              reduce using rule 11 (terms -> .)
    GE              reduce using rule 11 (terms -> .)
    LT              reduce using rule 11 (terms -> .)
    GT              reduce using rule 11 (terms -> .)
    STAR            reduce using rule 11 (terms -> .)
    SLASH           reduce using rule 11 (terms -> .)
    MODULO          reduce using rule 11 (terms -> .)
    POW             reduce using rule 11 (terms -> .)
    COMMA           reduce using rule 11 (terms -> .)
    PSLASH          reduce using rule 11 (terms -> .)
    NAME            shift and go to state 33
    LPAREN          shift and go to state 37
    LBRACKET        shift and go to state 38
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    terms                          shift and go to state 35
    term                           shift and go to state 36
    literal                        shift and go to state 39

state 7

    (10) declaration -> AT . NAME NAME DOT

    NAME            shift and go to state 40


state 8

    (37) expr -> literal .

    DOT             reduce using rule 37 (expr -> literal .)
    IMPLIED_BY      reduce using rule 37 (expr -> literal .)
    PLUS            reduce using rule 37 (expr -> literal .)
    MINUS           reduce using rule 37 (expr -> literal .)
    EQ              reduce using rule 37 (expr -> literal .)
    NE              reduce using rule 37 (expr -> literal .)
    LE              reduce using rule 37 (expr -> literal .)
    GE              reduce using rule 37 (expr -> literal .)
    LT              reduce using rule 37 (expr -> literal .)
    GT              reduce using rule 37 (expr -> literal .)
    STAR            reduce using rule 37 (expr -> literal .)
    SLASH           reduce using rule 37 (expr -> literal .)
    MODULO          reduce using rule 37 (expr -> literal .)
    POW             reduce using rule 37 (expr -> literal .)
    COMMA           reduce using rule 37 (expr -> literal .)
    PSLASH          reduce using rule 37 (expr -> literal .)
    RPAREN          reduce using rule 37 (expr -> literal .)
    RBRACKET        reduce using rule 37 (expr -> literal .)
    RBRACE          reduce using rule 37 (expr -> literal .)


state 9

    (50) expr -> MINUS . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 41
    literal                        shift and go to state 8

state 10

    (51) expr -> LPAREN . expr RPAREN
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 43
    literal                        shift and go to state 8

state 11

    (17) exprs -> exprs_comma .

    PSLASH          reduce using rule 17 (exprs -> exprs_comma .)
    RBRACKET        reduce using rule 17 (exprs -> exprs_comma .)


state 12

    (54) literal -> INT .

    DOT             reduce using rule 54 (literal -> INT .)
    IMPLIED_BY      reduce using rule 54 (literal -> INT .)
    PLUS            reduce using rule 54 (literal -> INT .)
    MINUS           reduce using rule 54 (literal -> INT .)
    EQ              reduce using rule 54 (literal -> INT .)
    NE              reduce using rule 54 (literal -> INT .)
    LE              reduce using rule 54 (literal -> INT .)
    GE              reduce using rule 54 (literal -> INT .)
    LT              reduce using rule 54 (literal -> INT .)
    GT              reduce using rule 54 (literal -> INT .)
    STAR            reduce using rule 54 (literal -> INT .)
    SLASH           reduce using rule 54 (literal -> INT .)
    MODULO          reduce using rule 54 (literal -> INT .)
    POW             reduce using rule 54 (literal -> INT .)
    COMMA           reduce using rule 54 (literal -> INT .)
    PSLASH          reduce using rule 54 (literal -> INT .)
    NAME            reduce using rule 54 (literal -> INT .)
    LPAREN          reduce using rule 54 (literal -> INT .)
    LBRACKET        reduce using rule 54 (literal -> INT .)
    INT             reduce using rule 54 (literal -> INT .)
    STRING          reduce using rule 54 (literal -> INT .)
    FLOAT           reduce using rule 54 (literal -> INT .)
    VAR             reduce using rule 54 (literal -> INT .)
    RPAREN          reduce using rule 54 (literal -> INT .)
    RBRACKET        reduce using rule 54 (literal -> INT .)
    RBRACE          reduce using rule 54 (literal -> INT .)
    BY              reduce using rule 54 (literal -> INT .)
    AS              reduce using rule 54 (literal -> INT .)
    COLON           reduce using rule 54 (literal -> INT .)


state 13

    (55) literal -> STRING .

    DOT             reduce using rule 55 (literal -> STRING .)
    IMPLIED_BY      reduce using rule 55 (literal -> STRING .)
    PLUS            reduce using rule 55 (literal -> STRING .)
    MINUS           reduce using rule 55 (literal -> STRING .)
    EQ              reduce using rule 55 (literal -> STRING .)
    NE              reduce using rule 55 (literal -> STRING .)
    LE              reduce using rule 55 (literal -> STRING .)
    GE              reduce using rule 55 (literal -> STRING .)
    LT              reduce using rule 55 (literal -> STRING .)
    GT              reduce using rule 55 (literal -> STRING .)
    STAR            reduce using rule 55 (literal -> STRING .)
    SLASH           reduce using rule 55 (literal -> STRING .)
    MODULO          reduce using rule 55 (literal -> STRING .)
    POW             reduce using rule 55 (literal -> STRING .)
    COMMA           reduce using rule 55 (literal -> STRING .)
    PSLASH          reduce using rule 55 (literal -> STRING .)
    NAME            reduce using rule 55 (literal -> STRING .)
    LPAREN          reduce using rule 55 (literal -> STRING .)
    LBRACKET        reduce using rule 55 (literal -> STRING .)
    INT             reduce using rule 55 (literal -> STRING .)
    STRING          reduce using rule 55 (literal -> STRING .)
    FLOAT           reduce using rule 55 (literal -> STRING .)
    VAR             reduce using rule 55 (literal -> STRING .)
    RPAREN          reduce using rule 55 (literal -> STRING .)
    RBRACKET        reduce using rule 55 (literal -> STRING .)
    RBRACE          reduce using rule 55 (literal -> STRING .)
    BY              reduce using rule 55 (literal -> STRING .)
    AS              reduce using rule 55 (literal -> STRING .)
    COLON           reduce using rule 55 (literal -> STRING .)


state 14

    (56) literal -> FLOAT .

    DOT             reduce using rule 56 (literal -> FLOAT .)
    IMPLIED_BY      reduce using rule 56 (literal -> FLOAT .)
    PLUS            reduce using rule 56 (literal -> FLOAT .)
    MINUS           reduce using rule 56 (literal -> FLOAT .)
    EQ              reduce using rule 56 (literal -> FLOAT .)
    NE              reduce using rule 56 (literal -> FLOAT .)
    LE              reduce using rule 56 (literal -> FLOAT .)
    GE              reduce using rule 56 (literal -> FLOAT .)
    LT              reduce using rule 56 (literal -> FLOAT .)
    GT              reduce using rule 56 (literal -> FLOAT .)
    STAR            reduce using rule 56 (literal -> FLOAT .)
    SLASH           reduce using rule 56 (literal -> FLOAT .)
    MODULO          reduce using rule 56 (literal -> FLOAT .)
    POW             reduce using rule 56 (literal -> FLOAT .)
    COMMA           reduce using rule 56 (literal -> FLOAT .)
    PSLASH          reduce using rule 56 (literal -> FLOAT .)
    NAME            reduce using rule 56 (literal -> FLOAT .)
    LPAREN          reduce using rule 56 (literal -> FLOAT .)
    LBRACKET        reduce using rule 56 (literal -> FLOAT .)
    INT             reduce using rule 56 (literal -> FLOAT .)
    STRING          reduce using rule 56 (literal -> FLOAT .)
    FLOAT           reduce using rule 56 (literal -> FLOAT .)
    VAR             reduce using rule 56 (literal -> FLOAT .)
    RPAREN          reduce using rule 56 (literal -> FLOAT .)
    RBRACKET        reduce using rule 56 (literal -> FLOAT .)
    RBRACE          reduce using rule 56 (literal -> FLOAT .)
    BY              reduce using rule 56 (literal -> FLOAT .)
    AS              reduce using rule 56 (literal -> FLOAT .)
    COLON           reduce using rule 56 (literal -> FLOAT .)


state 15

    (57) literal -> VAR .

    DOT             reduce using rule 57 (literal -> VAR .)
    IMPLIED_BY      reduce using rule 57 (literal -> VAR .)
    PLUS            reduce using rule 57 (literal -> VAR .)
    MINUS           reduce using rule 57 (literal -> VAR .)
    EQ              reduce using rule 57 (literal -> VAR .)
    NE              reduce using rule 57 (literal -> VAR .)
    LE              reduce using rule 57 (literal -> VAR .)
    GE              reduce using rule 57 (literal -> VAR .)
    LT              reduce using rule 57 (literal -> VAR .)
    GT              reduce using rule 57 (literal -> VAR .)
    STAR            reduce using rule 57 (literal -> VAR .)
    SLASH           reduce using rule 57 (literal -> VAR .)
    MODULO          reduce using rule 57 (literal -> VAR .)
    POW             reduce using rule 57 (literal -> VAR .)
    COMMA           reduce using rule 57 (literal -> VAR .)
    PSLASH          reduce using rule 57 (literal -> VAR .)
    NAME            reduce using rule 57 (literal -> VAR .)
    LPAREN          reduce using rule 57 (literal -> VAR .)
    LBRACKET        reduce using rule 57 (literal -> VAR .)
    INT             reduce using rule 57 (literal -> VAR .)
    STRING          reduce using rule 57 (literal -> VAR .)
    FLOAT           reduce using rule 57 (literal -> VAR .)
    VAR             reduce using rule 57 (literal -> VAR .)
    RPAREN          reduce using rule 57 (literal -> VAR .)
    RBRACKET        reduce using rule 57 (literal -> VAR .)
    RBRACE          reduce using rule 57 (literal -> VAR .)
    BY              reduce using rule 57 (literal -> VAR .)
    AS              reduce using rule 57 (literal -> VAR .)
    COLON           reduce using rule 57 (literal -> VAR .)


state 16

    (3) declarations -> declaration declarations .

    $end            reduce using rule 3 (declarations -> declaration declarations .)


state 17

    (4) declaration -> expr DOT .

    NAME            reduce using rule 4 (declaration -> expr DOT .)
    AT              reduce using rule 4 (declaration -> expr DOT .)
    MINUS           reduce using rule 4 (declaration -> expr DOT .)
    LPAREN          reduce using rule 4 (declaration -> expr DOT .)
    INT             reduce using rule 4 (declaration -> expr DOT .)
    STRING          reduce using rule 4 (declaration -> expr DOT .)
    FLOAT           reduce using rule 4 (declaration -> expr DOT .)
    VAR             reduce using rule 4 (declaration -> expr DOT .)
    PSLASH          reduce using rule 4 (declaration -> expr DOT .)
    $end            reduce using rule 4 (declaration -> expr DOT .)


state 18

    (5) declaration -> expr IMPLIED_BY . body DOT
    (23) body -> . expr
    (24) body -> . window
    (25) body -> . expr COMMA body
    (26) body -> . window COMMA body
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (27) window -> . SET vars operators
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    SET             shift and go to state 47
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 44
    body                           shift and go to state 45
    window                         shift and go to state 46
    literal                        shift and go to state 8

state 19

    (38) expr -> expr PLUS . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 48
    literal                        shift and go to state 8

state 20

    (39) expr -> expr MINUS . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 49
    literal                        shift and go to state 8

state 21

    (40) expr -> expr EQ . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 50
    literal                        shift and go to state 8

state 22

    (41) expr -> expr NE . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 51
    literal                        shift and go to state 8

state 23

    (42) expr -> expr LE . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 52
    literal                        shift and go to state 8

state 24

    (43) expr -> expr GE . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 53
    literal                        shift and go to state 8

state 25

    (44) expr -> expr LT . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 54
    literal                        shift and go to state 8

state 26

    (45) expr -> expr GT . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR

    NAME            shift and go to state 42
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    INT             shift and go to state 12
    STRING          shift and go to state 13
    FLOAT           shift and go to state 14
    VAR             shift and go to state 15

    expr                           shift and go to state 55
    literal                        shift and go to state 8

state 27

    (46) expr -> expr STAR . expr
    (36) expr -> . NAME terms
    (37) expr -> . literal
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr EQ expr
    (41) expr -> . expr NE expr
    (42) expr -> . expr LE expr
    (43) expr -> . expr GE expr
    (44) expr -> . expr LT expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr STAR expr
    (47) expr -> . expr SLASH expr
    (48) expr -> . expr MODULO expr
    (49) expr -> . expr POW expr
    (50) expr -> . MINUS expr
    (51) expr -> . LPAREN expr RPAREN
    (54) literal -> . INT
    (55) literal -> . STRING
    (56) literal -> . FLOAT
    (57) literal -> . VAR
